--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
     <link rel="stylesheet" href="temas.css">
 </head>
 <body>
-    <div class="contenedor">
+    <div  class="contenedor">
 <div class="encabezado"></div>
 <div class="menu"></div>
 <div class="contenedor2">
-    <div class="izquierda"></div>
-<div class="centro"></div>
-<div class="derecha"></div>
+<div  class="izquierdo">
+    Sofia Zapata Tatiana Bran
 </div>
+<div  class="centro"></div>
+<div  class="derechos"></div>
 
+
+</div>
     </div>
+
+
+
+
+
 </body>
 </html>
