--- a/matematicas.html
+++ b/matematicas.html
@@ -10,7 +10,7 @@
 <body>
     <div class="contenedor">
 <div class="encabezado">
-    Asignatura de Tecnologia
+    Asignatura de Matematicas
 </div>
 <div class="menu">
     <div class="Tecnologia">
