--- a/index.html
+++ b/index.html
@@ -28,12 +28,22 @@
 </div>
 <div class="contenedor2">
     <div class="izquierda">
-        ana sofia alvarez parra, 
-        yeseleyn gutierres,
-        juam jose corrales,
-        juan andres rondal .
+       Yeseleyn gutierrez garcia, Ana sofia alvarez parra.
     </div>
-<div class="centro"></div>
+<div class="centro">
+    
+    FUENTES DE ENERGIA
+</p>
+<p>
+    Es un recurso del cual se extrae energía con distintos fines, principalmente comerciales. Sin embargo, no siempre se ha hecho así.
+</p>
+<p>
+    El hombre utilizó uno de los principales recursos naturales para cubrir sus necesidades. Cuando descubrió el fuego, el único fin que tenía era protegerlo del frío y servirle para cocinar alimentos. Aunque en el presente seguimos utilizando el fuego para estos fines, el resto de recursos (naturales o artificiales) ha dado lugar a las fuentes de energía, las cuales son explotadas en centrales o industrias.
+</p>
+<p>
+    
+</p>
+</div>
 <div class="derecha"></div>
 </div>
 
