actualizacion 10 de julio

--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 
 </div>
+<div class="contenido">
+    <div class="imagentecno">
+        <img src="./foto.webp" alt="foto" height="150" width="150">
+
+    </div>
+    <div class="textotecno">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, ex quo veritatis et eos in quaerat temporibus praesentium consectetur reiciendis molestias inventore maiores, vero aliquid ea est consequuntur laudantium officia!
+    </div>
+</div>
 
 </body>
 
