actualizacion 2 3 de noviembre

--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -179,8 +179,11 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 
 <div class="contenido">
-<div class="imagentecno3"></div>
+
 <div class="textotecno3">
+    <h4>La comunicación humana se ha transformado a lo largo de la humanidad de manera paralela al desarrollo tecnológico. Basta recordar que cuando se inventa la imprenta, la tradición oral de pasar la historia y las costumbres se ve afectada al quedar estas referencias reflejadas de manera fija en un libro. Se perdió una parte de la tradición oral, pero se ganó en la universalización de la cultura humana.
+        Hoy, nos enfrentamos a un reto de igual magnitud, los dispositivos móviles fueron inventados para que el humano pudiera hablar entre sus seres queridos o de interés, pero hoy, por las
+        aplicaciones de chats, se empieza a perder la tradición de hablar con otras personas. Hoy, una gran parte de la humanidad se comunica cada vez más con las diferentes mensajerías a través de textos, por medio de símbolos llamados emoticones y  por medio de grabaciones. La humanidad está en la disyuntiva nuevamente de perder una parte de la tradición oral, para ganar rapidez y universalidad. Tengo más de diez años impartiendo talleres enfocados a ayudar a los ejecutivos o políticos en el desarrollo de habilidades y competencias de comunicación, tanto para comunicarse de mejor manera en los ámbitos personales  y de negocios o para poder presentar de mejor manera sus ideas ante diferentes audiencias o medios de comunicación, a últimas fechas me encuentro con que los humanos estamos perdiendo el entendimiento y la habilidad para utilizar las herramientas naturales que tenemos para poder comunicarnos de mejor manera, como consecuencia de la digitalización y el crecimiento de la tecnología. Y esto sólo se puede entender por tres factores.</h4>
 
 </div>
 
