--- a/sociales3.html
+++ b/sociales3.html
@@ -179,13 +179,11 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 
     <div class="contenido">
-
+        <div  class="imagensociales3"></div>
     
     <div class="textosociales3">
-    <h1>la primera revolucin industrial se llevo a cabo 1760 en el reino unido se extendio en el resto de Europa y los Estados Unidos gracias a los avances de unos cientificos que se unieron a una busqueda de nuevos metodos de produccion.</h1>
-    <h1>Esta etapa no solo trajo consigo cambios en la manera de producir, sino también en las economías, la política, la geografía y la cultura. consiguieron introducir la máquina de vapor, la cual se considera “motor” de la Primera Revolución Industrial. A partir de aquí surgieron diferentes innovaciones que cambiarían el mundo: máquinas de hilar y tejer, técnicas de especialización para la mano de obra, energía eléctrica y motores de combustión son solo algunos ejemplos.</h1>
+    <h2>La revolución tecnológica es un proceso dentro de la historia donde ocurre un cambio importante al introducirse una o otra nueva tecnologías nuevas. Su implementación, es decir, su puesta en marcha, marca una época de progreso, Investigación y desarrollo, e innovación, en una serie de aspectos de la sociedad. Sin embargo, a su vez puede generar un impacto negativo en el ambiente o generar lo que se llama paro tecnológico</h2>
     
-    <div  class="imagensociales3"></div>
 
 </div>
 
