--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -185,6 +185,9 @@ EJEMPLO DE MENÚ DESPLEGABLE
         Hoy, nos enfrentamos a un reto de igual magnitud, los dispositivos móviles fueron inventados para que el humano pudiera hablar entre sus seres queridos o de interés, pero hoy, por las
         aplicaciones de chats, se empieza a perder la tradición de hablar con otras personas. Hoy, una gran parte de la humanidad se comunica cada vez más con las diferentes mensajerías a través de textos, por medio de símbolos llamados emoticones y  por medio de grabaciones. La humanidad está en la disyuntiva nuevamente de perder una parte de la tradición oral, para ganar rapidez y universalidad. Tengo más de diez años impartiendo talleres enfocados a ayudar a los ejecutivos o políticos en el desarrollo de habilidades y competencias de comunicación, tanto para comunicarse de mejor manera en los ámbitos personales  y de negocios o para poder presentar de mejor manera sus ideas ante diferentes audiencias o medios de comunicación, a últimas fechas me encuentro con que los humanos estamos perdiendo el entendimiento y la habilidad para utilizar las herramientas naturales que tenemos para poder comunicarnos de mejor manera, como consecuencia de la digitalización y el crecimiento de la tecnología. Y esto sólo se puede entender por tres factores.</h4>
 
+        <iframe src="https://drive.google.com/file/d/1FQm2jEjhUPyYsNc5yU0rD00cL9uWQed4/preview" width="640" height="480" allow="autoplay"></iframe>
+
+
 </div>
 
 </body>
